<resources>
    <string name="app_name">Exa1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="convert">Convert</string>
    <string name="enter_the_amount_to_exchange_pesos">Enter the amount to exchange (Pesos):</string>
    <string name="_1000" translatable="false">1000</string>
    <string name="_000" translatable="false">$000</string>
    <string name="result">Result:</string>
    <string name="_100" translatable="false">$1000</string>
    <string name="pesos_dollars">Pesos - Dollars</string>
    <string name="convert2">Convert</string>
    <string name="_10" translatable="false">1000</string>
    <string name="enter_the_amount_to_exchange_pesos2">Enter the amount to exchange (Pesos):</string>
    <string name="_0000" translatable="false">$000</string>
    <string name="result2">Result:</string>
    <string name="_100000" translatable="false">$1000</string>
    <string name="pesos_euro">Pesos - Euro</string>
    <string name="dollar">Dollar</string>
    <string name="euro" translatable="false">Euro</string>
    <string name="history">History</string>
    <string name="dark_mode">Dark Mode</string>
</resources>