<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".SegundoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/sec"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="650dp">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pesos_euro"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eurc"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/enter_the_amount_to_exchange_pesos2" />

        <EditText
            android:id="@+id/entradaEur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/_10"
            android:autofillHints="" />
        <EditText
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/_100000"
            android:visibility="invisible"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btnEurCam"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:text="@string/convert2"/>

        <ImageView
            android:id="@+id/imgEur"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/ic_euro" />

        <TextView
            android:id="@+id/resl2"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:text="@string/result2" />

        <TextView
            android:id="@+id/resd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/_0000" />




    </LinearLayout>

</FrameLayout>