<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".PrimerFragment">

    <!-- TODO: Update blank fragment layout -->
    
    <LinearLayout
        android:id="@+id/sec"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="650dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="top|center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pesos_dollars"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dolc"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="@string/enter_the_amount_to_exchange_pesos" />

        <EditText
            android:id="@+id/entradaDol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/_1000"
            tools:ignore="LabelFor"
            android:autofillHints="" />
        <EditText
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="12"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/_100"
            android:visibility="invisible"
            android:enabled="false"
            />

        <Button
            android:id="@+id/btnDolCam"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:text="@string/convert"/>

        <ImageView
            android:id="@+id/imgDol"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/ic_dol" />

        <TextView
            android:id="@+id/resl"
            android:fontFamily="sans-serif-medium"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="@string/result" />

        <TextView
            android:id="@+id/resd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/_000" />




    </LinearLayout>






</FrameLayout>

